tests/sumo/devices/rerouting/assignment/errors/disconnect/errors.sumo
Warning: No connection between edge 'left' and edge 'middle' found.
Warning: No route for vehicle '0' found.
Error: Vehicle '0' has no valid route.
Quitting (on error).
